# llvm-ir

./: .gitignore  Cargo.toml  LICENSE  README.md  aliases.js  build.rs  clippy.toml  index.html  refresh-docs.sh  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
bincode/: all.html  enum.ErrorKind.html  fn.config.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  struct.Config.html  trait.BincodeRead.html  type.Error.html  type.Result.html
byteorder/: enum.BigEndian.html  enum.LittleEndian.html
either/: enum.Either.html
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_CHAOS.html  constant.AF_CNT.html  constant.AF_COIP.html  constant.AF_DATAKIT.html  constant.AF_DECnet.html  constant.AF_DLI.html  constant.AF_E164.html  constant.AF_ECMA.html  constant.AF_HYLINK.html  constant.AF_IMPLINK.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_ISDN.html  constant.AF_ISO.html  constant.AF_LAT.html  constant.AF_LINK.html  (+1947 more)
llvm_ir/: all.html  enum.AssemblyDialect.html  enum.Attribute.html  enum.Constant.html  enum.DLLStorageClass.html  enum.FPPredicate.html  enum.FPType.html  enum.Float.html  enum.FunctionAttribute.html  enum.Instruction.html  enum.InstructionMetadata.html  enum.IntPredicate.html  enum.LandingPadClause.html  enum.Linkage.html  enum.MemoryOrdering.html  enum.Name.html  enum.Operand.html  enum.ParameterAttribute.html  enum.RMWOperation.html  enum.SelectionKind.html  enum.SynchronizationScope.html  enum.TailCallKind.html  enum.Terminator.html  enum.ThreadLocalMode.html  enum.Type.html  enum.UnnamedAddr.html  enum.Visibility.html  index.html  sidebar-items.js  struct.Alloca.html  struct.AtomicRMW.html  struct.Atomicity.html  struct.BasicBlock.html  struct.Br.html  struct.Call.html  struct.CatchPad.html  struct.CatchRet.html  struct.CatchSwitch.html  struct.CleanupPad.html  struct.CleanupRet.html  (+34 more)
llvm_ir/basicblock/: index.html  sidebar-items.js  struct.BasicBlock.html
llvm_ir/constant/: enum.Constant.html  enum.Float.html  index.html  sidebar-items.js  struct.AShr.html  struct.Add.html  struct.AddrSpaceCast.html  struct.And.html  struct.BitCast.html  struct.Or.html  (+37 more)
llvm_sys/: all.html  constant.LLVMAttributeFunctionIndex.html  constant.LLVMAttributeReturnIndex.html  enum.LLVMAtomicOrdering.html  enum.LLVMAtomicRMWBinOp.html  enum.LLVMBasicBlock.html  enum.LLVMBuilder.html  enum.LLVMCallConv.html  enum.LLVMComdat.html  enum.LLVMContext.html  enum.LLVMDLLStorageClass.html  enum.LLVMDiagnosticInfo.html  enum.LLVMDiagnosticSeverity.html  enum.LLVMInlineAsmDialect.html  enum.LLVMIntPredicate.html  enum.LLVMLandingPadClauseTy.html  enum.LLVMLinkage.html  enum.LLVMMemoryBuffer.html  enum.LLVMModule.html  enum.LLVMModuleFlagBehavior.html  enum.LLVMModuleProvider.html  enum.LLVMOpaqueAttributeRef.html  enum.LLVMOpaqueDIBuilder.html  enum.LLVMOpaqueJITEventListener.html  enum.LLVMOpaqueMetadata.html  enum.LLVMOpaqueModuleFlagEntry.html  enum.LLVMOpaqueNamedMDNode.html  enum.LLVMOpaqueValueMetadataEntry.html  enum.LLVMOpcode.html  enum.LLVMPassManager.html  enum.LLVMPassRegistry.html  enum.LLVMRealPredicate.html  enum.LLVMThreadLocalMode.html  enum.LLVMType.html  enum.LLVMTypeKind.html  enum.LLVMUnnamedAddr.html  enum.LLVMUse.html  enum.LLVMValue.html  enum.LLVMValueKind.html  enum.LLVMVisibility.html  (+4 more)
log/: all.html  constant.STATIC_MAX_LEVEL.html  enum.Level.html  enum.LevelFilter.html  fn.logger.html  fn.max_level.html  fn.set_boxed_logger.html  fn.set_logger.html  fn.set_max_level.html  index.html  macro.debug.html  macro.error.html  macro.info.html  macro.log.html  macro.log_enabled.html  macro.trace.html  macro.warn.html  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html  trait.Log.html
proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
quote/: index.html  macro.quote.html  macro.quote_spanned.html  trait.ToTokens.html  trait.TokenStreamExt.html
src/: basicblock.rs  constant.rs  debugloc.rs  from_llvm.rs  function.rs  instruction.rs  iterators.rs  lib.rs  llvm_sys.rs  metadata.rs  module.rs  name.rs  operand.rs  predicates.rs  terminator.rs  types.rs
syn/: all.html  enum.AttrStyle.html  enum.BareFnArgName.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.FloatSuffix.html  enum.GenericArgument.html  enum.GenericParam.html  enum.IntSuffix.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.PathArguments.html  enum.ReturnType.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_str.html  index.html  macro.Token.html  macro.braced.html  macro.bracketed.html  macro.custom_keyword.html  macro.custom_punctuation.html  macro.parenthesized.html  macro.parse_macro_input.html  macro.parse_quote.html  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.Attribute.html  (+102 more)
tests/: basic_tests.rs  llvm_10_tests.rs  llvm_11_tests.rs  llvm_12_tests.rs  llvm_17_tests.rs  llvm_18_tests.rs  llvm_19_tests.rs  llvm_20_tests.rs  llvm_21_tests.rs  llvm_8_tests.rs  llvm_9_tests.rs  llvm_tests.rs
(+2128 files in other folders)
