[package]
name = "llvm-ir"
version = "0.7.4"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "LLVM IR in natural Rust data structures"
documentation = "https://docs.rs/llvm-ir"
repository = "https://github.com/cdisselkoen/llvm-ir"
readme = "README.md"
keywords = ["llvm", "ir"]
license = "MIT"
build = "build.rs"

[dependencies]
llvm-sys-80 = { package = "llvm-sys", version = "80.3.0", optional = true }
llvm-sys-90 = { package = "llvm-sys", version = "90.2.0", optional = true }
llvm-sys-100 = { package = "llvm-sys", version = "100.2.0", optional = true }
llvm-sys-110 = { package = "llvm-sys", version = "110.0.0", optional = true }
either = "1.5.2"
log = "0.4.0"

[dev-dependencies]
env_logger = "0.6.2"

[features]
# Select the LLVM version to be compatible with.
# You _must_ enable exactly one of the following features.
llvm-8 = ["llvm-sys-80"]
llvm-9 = ["llvm-sys-90"]
llvm-10 = ["llvm-sys-100"]
llvm-11 = ["llvm-sys-110"]

# We'd like to have a "strict-versioning" feature which enables the
# corresponding feature in llvm-sys. "strict-versioning" requires an exact
# match between the system LLVM version and the version selected with the above
# features. For more information see the llvm-sys README.
# Unfortunately, there is currently no way to enable a feature on an optional
# dependency without also activating the optional dependency.
# (See https://github.com/rust-lang/cargo/issues/3494.)
# This means that a declaration like the following:
# strict-versioning = ["llvm-sys-80/strict-versioning", "llvm-sys-90/strict-versioning", "llvm-sys-100/strict-versioning", "llvm-sys-110/strict-versioning"]
# would mean that llvm-sys-80, llvm-sys-90, llvm-sys-100, and llvm-sys-110
# would all be enabled, along with their strict-versioning features.
# This would increase build times as we're building unnecessary crates; and
# more importantly, it would require the user to have all four of LLVM 8, 9,
# 10, and 11 available on their system.
# Since previous versions of llvm-ir did have a "strict-versioning" feature, we
# will still include a "strict-versioning" feature to avoid breaking
# compatibility, but this feature currently has no effect.
# Also, this feature will be removed in the next major version of llvm-ir
# (0.8.0).
strict-versioning = []

# Instead, as a workaround, we'll have a separate strict-versioning feature for
# each LLVM version. This will enable the corresponding LLVM version feature,
# and the "strict-versioning" feature on the corresponding llvm-sys dependency.
# That means that we will require an exact match between the system LLVM
# version and the LLVM version chosen here.
llvm-8-strict = ["llvm-8", "llvm-sys-80/strict-versioning"]
llvm-9-strict = ["llvm-9", "llvm-sys-90/strict-versioning"]
llvm-10-strict = ["llvm-10", "llvm-sys-100/strict-versioning"]
llvm-11-strict = ["llvm-11", "llvm-sys-110/strict-versioning"]

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-10 feature
features = ["llvm-10"]
