[package]
name = "llvm-ir"
version = "0.9.0"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "LLVM IR in natural Rust data structures"
documentation = "https://docs.rs/llvm-ir"
repository = "https://github.com/cdisselkoen/llvm-ir"
readme = "README.md"
keywords = ["llvm", "ir"]
license = "MIT"
build = "build.rs"

[dependencies]
llvm-sys-80 = { package = "llvm-sys", version = "80.3.0", optional = true }
llvm-sys-90 = { package = "llvm-sys", version = "90.2.0", optional = true }
llvm-sys-100 = { package = "llvm-sys", version = "100.2.0", optional = true }
llvm-sys-110 = { package = "llvm-sys", version = "110.0.0", optional = true }
llvm-sys-120 = { package = "llvm-sys", version = "120.2.0", optional = true }
llvm-sys-130 = { package = "llvm-sys", version = "130.0.0", optional = true }
llvm-sys-140 = { package = "llvm-sys", version = "140.0.0", optional = true }
llvm-sys-150 = { package = "llvm-sys", version = "150.1.0", optional = true }
either = "1.9"
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
itertools = "0.11"

[features]
# Select the LLVM version to be compatible with.
# You _must_ enable exactly one of the following features.
llvm-8 = ["llvm-sys-80", "llvm-8-or-lower", "llvm-8-or-greater"]
llvm-9 = ["llvm-sys-90", "llvm-9-or-lower", "llvm-9-or-greater"]
llvm-10 = ["llvm-sys-100", "llvm-10-or-lower", "llvm-10-or-greater"]
llvm-11 = ["llvm-sys-110", "llvm-11-or-lower", "llvm-11-or-greater"]
llvm-12 = ["llvm-sys-120", "llvm-12-or-lower", "llvm-12-or-greater"]
llvm-13 = ["llvm-sys-130", "llvm-13-or-lower", "llvm-13-or-greater"]
llvm-14 = ["llvm-sys-140", "llvm-14-or-lower", "llvm-14-or-greater"]
llvm-15 = ["llvm-sys-150", "llvm-15-or-lower", "llvm-15-or-greater"]

###
# For convenience, these automatically-enabled features allow us to avoid
# checking complex combinations of features all the time. They are not meant to
# be manually enabled; use the above llvm-x features instead
llvm-8-or-greater = []
llvm-9-or-greater = ["llvm-8-or-greater"]
llvm-10-or-greater = ["llvm-9-or-greater"]
llvm-11-or-greater = ["llvm-10-or-greater"]
llvm-12-or-greater = ["llvm-11-or-greater"]
llvm-13-or-greater = ["llvm-12-or-greater"]
llvm-14-or-greater = ["llvm-13-or-greater"]
llvm-15-or-greater = ["llvm-14-or-greater"]

llvm-8-or-lower = ["llvm-9-or-lower"]
llvm-9-or-lower = ["llvm-10-or-lower"]
llvm-10-or-lower = ["llvm-11-or-lower"]
llvm-11-or-lower = ["llvm-12-or-lower"]
llvm-12-or-lower = ["llvm-13-or-lower"]
llvm-13-or-lower = ["llvm-14-or-lower"]
llvm-14-or-lower = ["llvm-15-or-lower"]
llvm-15-or-lower = []
###

# We'd like to have a "strict-versioning" feature which enables the
# corresponding feature in llvm-sys: i.e., requires an exact
# match between the system LLVM version and the version selected with the above
# features. For more information see the llvm-sys README.
# Unfortunately, there is currently no way to enable a feature on an optional
# dependency without also activating the optional dependency.
# (See https://github.com/rust-lang/cargo/issues/3494.)
# This means that a declaration like the following:
# strict-versioning = ["llvm-sys-80/strict-versioning", "llvm-sys-90/strict-versioning", "llvm-sys-100/strict-versioning", ...]
# would mean that llvm-sys-80, llvm-sys-90, llvm-sys-100, ...
# would all be enabled, along with their strict-versioning features.
# This would increase build times as we're building unnecessary crates; and
# more importantly, it would require the user to have all of these LLVM versions
# available on their system.
# Instead, as a workaround, we'll have a separate strict-versioning feature for
# each LLVM version. This will enable the corresponding LLVM version feature,
# and the "strict-versioning" feature on the corresponding llvm-sys dependency.
# That means that we will require an exact match between the system LLVM
# version and the LLVM version chosen here.
llvm-8-strict = ["llvm-8", "llvm-sys-80/strict-versioning"]
llvm-9-strict = ["llvm-9", "llvm-sys-90/strict-versioning"]
llvm-10-strict = ["llvm-10", "llvm-sys-100/strict-versioning"]
llvm-11-strict = ["llvm-11", "llvm-sys-110/strict-versioning"]
llvm-12-strict = ["llvm-12", "llvm-sys-120/strict-versioning"]
llvm-13-strict = ["llvm-13", "llvm-sys-130/strict-versioning"]
llvm-14-strict = ["llvm-14", "llvm-sys-140/strict-versioning"]
llvm-15-strict = ["llvm-15", "llvm-sys-150/strict-versioning"]

# As with the strict feature above, we cannot enable it globally, as it would
# activate all the llvm-sys-* dependencies, so have a single feature for each
# version to enable dynamic linking. We only allow this for llvm-sys versions
# that have this feature (>=llvm-sys-120).
llvm-12-dynamic = ["llvm-12", "llvm-sys-120/prefer-dynamic"]
llvm-13-dynamic = ["llvm-13", "llvm-sys-130/prefer-dynamic"]
llvm-14-dynamic = ["llvm-14", "llvm-sys-140/prefer-dynamic"]
llvm-15-dynamic = ["llvm-15", "llvm-sys-150/prefer-dynamic"]

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-10 feature
features = ["llvm-10"]
